add line to automatically restart

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       EULA: "TRUE"
     volumes:
       - minecraft-data:/data
+    restart: 'unless-stopped'
 
 volumes:
   minecraft-data:
