remove external volume definition and use folders for data instead

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,15 +35,15 @@ services:
       restore-backup:
         condition: service_completed_successfully
     volumes:
-      - minecraft-data:/data
+      - ./minecraft-data:/data
     restart: 'unless-stopped'
   restore-backup:
     image: itzg/mc-backup
     restart: "no"
     entrypoint: restore-tar-backup
     volumes:
-      - minecraft-data:/data
-      - minecraft-backups:/backups:ro
+      - ./minecraft-data:/data
+      - ./minecraft-backups:/backups:ro
   backups:
     image: itzg/mc-backup
     depends_on:
@@ -57,12 +57,6 @@ services:
       INITIAL_DELAY: 0
       PAUSE_IF_NO_PLAYERS: "true"
     volumes:
-      - minecraft-data:/data:ro
-      - minecraft-backups:/backups
+      - ./minecraft-data:/data:ro
+      - ./minecraft-backups:/backups
     restart: 'unless-stopped'
-
-volumes:
-  minecraft-data:
-    external: true
-  minecraft-backups:
-    external: true
