--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       EULA: "TRUE"
       SERVER_NAME: "JK1-GNOCCHI"
       MOTD: "Welcome! Chill vibes for chill miners :)"
-      VERSION: "1.21.3"
+      VERSION: "1.21.5"
       RCON_CMDS_STARTUP: |-
         gamerule keepInventory true
         gamerule maxEntityCramming 0
@@ -31,6 +31,7 @@ services:
       ALLOW_FLIGHT: "false"
       GAMEMODE: "survival"
       SPAWN_PROTECTION: "0"
+      VIEW_DISTANCE: "32"
     depends_on:
       restore-backup:
         condition: service_completed_successfully
