add 4g memory limit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       GAMEMODE: "survival"
       SPAWN_PROTECTION: "0"
       VIEW_DISTANCE: "32"
+      MEMORY: "4G"
     depends_on:
       restore-backup:
         condition: service_completed_successfully
