--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     ports:
       - "25565:25565"
     environment:
+      TZ: "Australia/Melbourne"
       EULA: "TRUE"
       SERVER_NAME: "JK1-GNOCCHI"
       MOTD: |
@@ -31,6 +32,7 @@ services:
       SYNC_CHUNK_WRITES: "FALSE"
       SIMULATION_DISTANCE:  "5"
       VIEW_DISTANCE: "18"
+      LOG_TIMESTAMP: "true"
       OPS: |
         m1nefury
       WHITELIST: |
