add aixureee and mcdouggets to whitelist

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,8 @@ services:
         snoopypoopi
         tcaura
         banzi101
+        aixureee
+        mcdouggets
     volumes:
       - ./minecraft-data:/data
     restart: 'unless-stopped'
