--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
         tcaura
         banzi101
         mcdouggets
+        aixuree
     volumes:
       - ./minecraft-data:/data
     restart: 'unless-stopped'
