--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       MOTD: |
         \u00A79Chill vibes for chill miners\u00A7r
         \u00A78Keep inventory is on!
-      VERSION: "1.21.10"
+      VERSION: "1.21.11"
       RCON_CMDS_STARTUP: |-
         gamerule keepInventory true
         gamerule maxEntityCramming 0
@@ -33,6 +33,7 @@ services:
         fallingtree
         collective
         villager-names-serilum
+        appleskin
       SYNC_CHUNK_WRITES: "FALSE"
       SIMULATION_DISTANCE:  "5"
       VIEW_DISTANCE: "18"
